  targets. (VRI)
- Makefile: Better make message when emutos-aranym.img is up to date. (VRI)
- Makefile: Update obj/country in a more reliable way using a simply expanded
  variable and the $(shell) function. (VRI)
- Makefile: Removed unnecessary dependencies already in makefile.dep. (VRI)
- Makefile: Always generate a full util/langs.c to avoid trouble. (VRI)
- bios/natfeat.S: Removed useless includes. (VRI)
- Makefile: Reintroduced the sleep workaround since "make all256" still does not
  correctly work on Ubuntu. (VRI)

2011-10-17
- Makefile: Cleanly fix the all256 and all192 targets on ext2 and ext3
  partitions. The sleep command is required because of low resolution
  filesystems limitations. (VRI)
- Makefile: Rollback to the always-execute-recipe method to update obj/country,
  since finally it is perfectly valid and more flexible. (VRI)
- Makefile: Improved build messages. (VRI)
- Makefile: Removed unnecessary removal of obj/country.o include/i18nconf.h.
  They are automatically rebuilt when necessary through dependencies. (VRI)

2011-10-18
- aes/gemaplib.c aes/gemasync.c aes/gemctrl.c aes/gemdisp.c aes/gemdos.c
  aes/gemevlib.c aes/gemflag.c aes/gemfmalt.c aes/gemfmlib.c aes/gemfslib.c
  aes/gemgraf.c aes/gemgrlib.c aes/gemgsxif.c aes/geminit.c aes/geminput.c
  aes/gemmnlib.c aes/gemobed.c aes/gemobjop.c aes/gemoblib.c aes/gempd.c
  aes/gemqueue.c aes/gemrslib.c aes/gemsclib.c aes/gemshlib.c aes/gemsuper.c
  aes/gemwmlib.c aes/gemwrect.c aes/machine.h aes/optimize.c desk/desk1.c
  desk/deskact.c desk/deskapp.c desk/deskdir.c desk/deskfpd.c desk/deskfun.c
  desk/deskglob.c desk/deskgraf.c desk/deskgsx.c desk/deskinf.c desk/deskins.c
  desk/deskmain.c desk/deskobj.c desk/deskpro.c desk/deskrsrc.c desk/desksupp.c
  desk/deskwin.c desk/gembind.c desk/icons.c desk/machine.h include/compat.h:
  Merge aes/machine.h and desk/machine.h into include/compat.h. Contributed by
  Roger Burrows. (VRI)